...
        android:text="@string/button_skills_survey"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/near_me_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/climbing_plan_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_climbing_plan"
        android:textAlignment="center"
...
